# terraform-docker-aws-bootstrap

./: .gitignore
backend/: Dockerfile  pyproject.toml
packer/: aws-docker.pkr.hcl
terraform/: main.tf  variables.tf  versions.tf
